Changes added for semantic html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </headpythoner>
 
   <main id="maincontent">
-    <section id="map-container" tabindex="-1">
+    <section id="map-container" tabindex="-1" role="application">
       <div id="map" aria-label="Map of restaurants"></div>
     </section>
     <section>
