--- a/restaurant.html
+++ b/restaurant.html
@@ -21,9 +21,11 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
+      <nav aria-label="Breadcrumb">
+        <ul id="breadcrumb" >
+          <li><a href="/" aria-current="page">Home</a></li>
+        </ul>
+      </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -38,7 +40,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container" tabindex="0" aria-label="Restaurant information">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
